--- a/conf/passenger.conf
+++ b/conf/passenger.conf
@@ -1,21 +1,23 @@
-   LoadModule passenger_module /root/.rbenv/versions/2.5.5/lib/ruby/gems/2.5.0/gems/passenger-6.0.2/buildout/apache2/mod_passenger.so
-   <IfModule mod_passenger.c>
-     PassengerRoot /root/.rbenv/versions/2.5.5/lib/ruby/gems/2.5.0/gems/passenger-6.0.2
-     PassengerDefaultRuby /root/.rbenv/versions/2.5.5/bin/ruby
-   </IfModule>
+LoadModule passenger_module /root/.rbenv/versions/2.5.5/lib/ruby/gems/2.5.0/gems/passenger-6.0.2/buildout/apache2/mod_passenger.so
+<IfModule mod_passenger.c>
+  PassengerRoot /root/.rbenv/versions/2.5.5/lib/ruby/gems/2.5.0/gems/passenger-6.0.2
+  PassengerDefaultRuby /root/.rbenv/versions/2.5.5/bin/ruby
+</IfModule>
 
 <VirtualHost *:80>
   ServerName localhost
 
   DocumentRoot /usr/local/apache2/htdocs/ 
+  Options -MultiViews -Indexes +FollowSymLinks +ExecCGI
   <Directory /usr/local/apache2/htdocs/>
-    Allow from all
-    Options -MultiViews
+  <FilesMatch "^[^\.]+$"> 
+                SetHandler cgi-script 
+  </FilesMatch>
+    Require all granted
   </Directory>
 
   <Directory /usr/local/app/public>
-    Allow from all
-    Options -MultiViews
+    Require all granted
   </Directory>
 
   Alias /api /usr/local/app/public
