set development as default environment

--- a/conf/passenger.conf
+++ b/conf/passenger.conf
@@ -24,5 +24,6 @@ LoadModule passenger_module /root/.rbenv/versions/2.5.5/lib/ruby/gems/2.5.0/gems
   <Location /api>
     PassengerBaseURI /api
     PassengerAppRoot /usr/local/app
+    RailsEnv development
   </Location>
 </VirtualHost>
